@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes'?>
-<addon id='plugin.video.youtube.beta' version='3.4.999' name='YouTube Beta' provider-name='TheCollective'>
+<addon id='plugin.video.youtube' version='3.4.999' name='YouTube' provider-name='TheCollective'>
   <requires>
     <import addon='xbmc.python' version='2.0'/>
     <import addon='script.module.simplejson' version='2.0.10'/>
-    <import addon='script.common.plugin.cache.beta' version='1.5.0'/>
-    <import addon='script.module.parsedom.beta' version='1.5.0'/>
-    <import addon='script.module.simple.downloader.beta' version='0.9.4'/>
+    <import addon='script.common.plugin.cache' version='1.5.0'/>
+    <import addon='script.module.parsedom' version='1.5.0'/>
+    <import addon='script.module.simple.downloader' version='0.9.4'/>
   </requires>
   <extension point='xbmc.python.pluginsource' library='default.py'>
         <provides>video</provides>
